# corteva-weather-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: deployment-plan.md
migrations/: env.py
migrations/versions/: 20260430_0001_create_weather_tables.py  20260502_0001_add_performance_indexes.py
scripts/: process_wx_data.py
src/weather_platform/: __init__.py  main.py  middleware.py
src/weather_platform/api/: dependencies.py  router.py
src/weather_platform/cli/: __init__.py  commands.py
src/weather_platform/config/: __init__.py  database.py  settings.py
src/weather_platform/ingestion/: __init__.py  ingest_weather_file.py  transformation.py
src/weather_platform/models/: __init__.py  base.py  weather_observation.py  weather_yearly_stat.py
src/weather_platform/repositories/: __init__.py  base.py  pagination.py  query_optimizer.py  weather.py
src/weather_platform/schemas/: __init__.py  health.py  (+1 more)
tests/: conftest.py
tests/integration/: conftest.py  test_aggregation_service.py  test_cli_ingest.py  test_ingestion_pipeline.py  test_observability.py  test_weather_api_endpoints.py
tests/unit/: test_aggregation_service.py  test_idempotent_ingestion.py  test_pagination_optimization.py  test_parser_transformations.py  test_repository_and_aggregation_edge_cases.py  test_schema_consistency.py  test_transformation_strategies.py  test_weather_file_parser.py  test_weather_query.py  test_weather_repository.py  test_weather_service.py  test_yearly_stats_openapi.py
(+10 files in other folders)
